fixed scrolling behind open hamburger menu, need to fix clicking on link with sub menu

--- a/assets/style/css/partials/header.css
+++ b/assets/style/css/partials/header.css
@@ -51,19 +51,17 @@ body .header {
 .header-container nav {
     height: 100%;
 
-    padding: 12rem 1rem;
+    padding: 1rem;
 
     display: none;
 
     position:fixed;
-    top: 0;
+    top: 120px;
     left:0;
     right: 0;
     bottom: 0;
 
     background-color: var(--clr-background);
-
-    transition : all .3s cubic-bezier(.645,.045,.355,1);
 }
 
 .header-container nav .menu-menu-principal-container .site-links {
@@ -84,10 +82,16 @@ body .header {
 
     padding: 1rem 1.5rem;
 
+    position: relative;
+
     border-radius: 0.5rem;
 
     text-align: center;
     text-transform: uppercase;
+}
+
+.header-container nav .menu-menu-principal-container .site-links li a {
+    position: relative;
 }
 
 .header-container nav .menu-menu-principal-container .site-links li:hover{
@@ -96,6 +100,10 @@ body .header {
 
 .header-container nav .menu-menu-principal-container .site-links li:active {
     background-color: var(--clr-card-background-active);
+}
+
+.header-container nav .menu-menu-principal-container .site-links li [aria-current='page'] {
+    border-bottom: 2px solid var(--clr-accent);
 }
 
 .header-container nav .menu-menu-principal-container .site-links .subMenuParent {
@@ -110,6 +118,11 @@ body .header {
 .header-container .sub-menu {
     display: none;
     justify-items: center;
+
+    position: absolute;
+    top: 2rem;
+    right: 0;
+    left: 0;
 }
 
 .header-container .sub-menu li a {
@@ -291,6 +304,7 @@ body .header {
         padding: 0;
         
         position: relative;
+        top: 0;
 
         display: flex;
         flex-wrap: wrap;
